[package]
name = "marci"
version = "0.1.0"
edition = "2021"
authors = ["Code Monad<codemonad@cryptape.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = { version = "4.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
env_logger = "0.10.0"
tokio-postgres = { version = "0.7.8", features= ["with-chrono-0_4"] }
tokio = { version = "1.28.0", features = ["full"] }
chrono = { version = "0.4" , features = ["serde"]}
clap = {version = "3"}